--- a/Views/Courses/Create.cshtml
+++ b/Views/Courses/Create.cshtml
@@ -8,6 +8,7 @@
 
     @using (Html.BeginForm("Create", "Courses"))
     {
+        @Html.AntiForgeryToken()
     <div class="form-group">
         @Html.LabelFor(m => m.Place)
         @Html.TextBoxFor(m => m.Place, new { @class = "from-group" })
@@ -30,4 +31,8 @@
     </div>
     <button type="submit" value="Save" class="btn btn-primary">Save</button>
     }
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
 
