--- a/Views/Courses/Attending.cshtml
+++ b/Views/Courses/Attending.cshtml
@@ -1,12 +1,12 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-@model Lab456.ViewModels.CoursesViewModel
+﻿@using System.Web.Razor.Parser.SyntaxTree
+@using Lab456.Models
 @using Microsoft.AspNet.Identity
-@using System.Web.Razor.Parser.SyntaxTree
+@model Lab456.ViewModels.CoursesViewModel
 
-
+@{
+    ViewBag.Title = "My Courses";
+}
+<h1>My Courses</h1>
 <div class="row">
     <ul class="course">
         @foreach (var course in Model.UpcommingCourses)
