--- a/Views/Courses/Mine.cshtml
+++ b/Views/Courses/Mine.cshtml
@@ -1,42 +1,38 @@
-﻿
-@using System.Web.Razor.Parser.SyntaxTree
-@using Lab456.Models
-@using Microsoft.AspNet.Identity
-@model IEnumerable<Lab456.Models.Course>
-
+﻿@model IEnumerable<Lab456.Models.Course>
 @{
     ViewBag.Title = "Mine";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h1>Mine</h1>
-<div class="row">
-    <ul class="course">
-        @foreach (var course in Model)
-        {
-            <li>
-                <div class="date">
-                    <div class="month">
-                        @course.DateTime.ToString("MM")
-                    </div>
-                    <div class="day">
-                        @course.DateTime.ToString("dd")
-                    </div>
+<h2>Mine</h2>
+<ul class="course">
+    @foreach (var course in Model)
+    {
+        <li>
+            <div class="date">
+                <div class="month">
+                    @course.DateTime.ToString("MM")
                 </div>
-                <div class="details">
-                    <span class="lecturer">@course.Lecturer.name</span><br />
-                    <span class="category">@course.Category.name</span>
-
+                <div class="day">
+                    @course.DateTime.ToString("dd")
                 </div>
-            </li>
-            <div class="action">
-                <a href="@Url.Action("Edit","Courses",new {id = course.Id })">Edit</a>
-                <a href="" class="js-cancel-course" data-course-id="@course.Id">Cancel</a>
             </div>
+            <div class="details">
+                <div class="lecturer">
+                    @course.Lecturer.name
 
-        }
-    </ul>
+                </div>
+                <div class="category">
+                    @course.Category.name
 
-</div>
+                </div>
+            </div>
+            <div class="action">
+                <a href="@Url.Action("Edit","Courses", new { id = course.Id})">Edit</a>
+                <a href="#" class="js-cancel-course" data-course-id="@course.Id">Cancel</a>
+            </div>
+        </li>
+    }
+</ul>
 @section scripts{
     <script>
         $(document).ready(
@@ -64,4 +60,3 @@
         )
     </script>
 }
-
