--- a/Views/Courses/Attending.cshtml
+++ b/Views/Courses/Attending.cshtml
@@ -29,7 +29,7 @@
                             {
                                 <span>
 
-                                    @if (Model.IsFollowLecturers.Any(d => d.Followee.Id == @course.LecturerId))
+                                    @if (Model.IsFollowLecturers.Any(d => d.Followee.Id == course.LecturerId))
                                     {
 
 
@@ -40,7 +40,7 @@
                                     }
                                     else
                                     {
-                                        var userId = @User.Identity.GetUserId();
+                                        
                                         <button class="btn btn-default btn-sm js-toggle-follow" data-user-id="@course.LecturerId">
                                             Follow?
 
@@ -109,28 +109,18 @@
                 $('.js-toggle-follow').click(function (e) {
                     var button = $(e.target);
                     $.post("/api/followings", { followeeId: button.attr("data-user-id") })
-                        .done((response) => {
+                        .done(function (response){
                             if (response.isFollow) {
+                                button.removeClass('btn-default')
+                                    .addClass('btn-info')
+                                    .text('Following');
 
-                                $('.js-toggle-follow').map((index, value) => {
-                                    console.log($(value).attr('data-user-id'), response.followeeId);
-                                    if ($(value).attr('data-user-id') == response.followeeId) {
-
-                                        return $(value).removeClass('btn-default')
-                                            .addClass('btn-info')
-                                            .text('Following');
-                                    }
-                                });
-                            } else {
-                                $('.js-toggle-follow').map((index, value) => {
-                                    if ($(value).attr('data-user-id') == response.followeeId) {
-                                        $(value).removeClass('btn-info')
-                                            .addClass('btn-default')
-                                            .text('Follow?');
-                                    }
-                                });
                             }
-
+                            else {
+                                button.removeClass('btn-info')
+                                    .addClass('btn-default')
+                                    .text('Follow?');
+                            }
 
                         })
                         .fail(
