--- a/Views/Courses/Mine.cshtml
+++ b/Views/Courses/Mine.cshtml
@@ -28,59 +28,35 @@
             </div>
             <div class="action">
                 <a href="@Url.Action("Edit","Courses", new { id = course.Id})">Edit</a>
-                <a href="#" class="js-cancel-course" data-course-id="@course.Id">Cancel</a>
+                <a href="" class="js-cancel-course" data-course-id="@course.Id">Cancel</a>
             </div>
         </li>
     }
 </ul>
 @section scripts{
     <script>
-        $(document).ready(function () {
-            $('.js-toggle-attendance').click(function (e) {
-                var button = $(e.target);
-                $.post("/api/attendances", { courseId: button.attr("data-course-id") })
-                    .done(function (response) {
-                        if (response.isFollow) {
-                            button.removeClass('btn-default')
-                                .addClass('btn-info')
-                                .text('Going');
-
-                        }
-                        else {
-                            button.removeClass('btn-info')
-                                .addClass('btn-default')
-                                .text('Going?');
-                        }
-
-                    })
-                    .fail(
+        $(document).ready(
+            function () {
+                $(".js-cancel-course").click(function (e) {
+                    e.preventDefault();
+                    var link = $(e.target);
+                    bootbox.confirm("Are you sure to cancel?",
                         function () {
-                            alert('Songthing failed!');
+                            $.ajax({
+                                url: "/api/courses/" + link.attr("data-course-id"),
+                                method: "DELETE"
+                            })
+                                .done(function () {
+                                    link.parents("li").fadeOut(function () {
+                                        $(this).remove();
+                                    })
+                                })
+                                .fail(function () {
+                                    alert("Something failed!");
+                                });
                         });
-            });
-            $('.js-toggle-follow').click(function (e) {
-                var button = $(e.target);
-                $.post("/api/followings", { followeeId: button.attr("data-user-id") })
-                    .done((response) => {
-                        if (response.isFollow) {
-                            button.removeClass('btn-default')
-                                .addClass('btn-info')
-                                .text('Following');
-
-                        }
-                        else {
-                            button.removeClass('btn-info')
-                                .addClass('btn-default')
-                                .text('Follow?');
-                        }
-
-
-                    })
-                    .fail(
-                        function () {s
-                            alert('Songthing failed!');
-                        });
-            });
-        })
+                });
+            }
+        )
     </script>
 }
